# ImageMosaicWall

./: .clang-format  .travis.yml  CMakeLists.txt  ImageMosaicWall.pro  README.md  assets.qrc  asyncdirectoryscanner.cpp  asyncdirectoryscanner.h  bootstrap-linux.sh  build-linux.sh  build-osx.sh  default.qss  i18nutils.h  imageprocessing.cpp  imageprocessing.h  imageviewer.cpp  imageviewer.h  imageviewer.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressbutton.cpp  progressbutton.h
assets/: ImageMosaicWall.desktop  README.md  imw-logo.icns
cmake/modules/: MacroInstall.cmake  i18nUtils.cmake
cmake/templates/: i18n.qrc.in_cmake  target.uninstall.cmake.in_cmake
dplugin/: CMakeLists.txt  README.md  imagemosaicwallgenericplugin.cpp  imagemosaicwallgenericplugin.h
i18n/: de.ts  fr.ts  i18n_list.cmake
